--- a/src/main/resources/templates/boards/posts/detail/sports.html
+++ b/src/main/resources/templates/boards/posts/detail/sports.html
@@ -6,7 +6,7 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <div>
         <h1> 운동 게시판 - 게시글 세부 정보</h1>
-        <form role="form" action="/boards/FREE/new" method="post">
+        <form role="form" method="post">
             <div class="form-group">
                 <label>제목</label>
                 <textarea type="text" class="form-control" th:disabled="true" th:text="${post.title}"></textarea>
@@ -23,8 +23,8 @@
                 <label>내용</label>
                 <textarea class="form-control" th:disabled="true" th:text="${post.content}">내용 입력</textarea>
             </div>
-            <button type="submit" class="btn btn-secondary" th:if="${member.id} == ${post.author.id}">글 수정</button>
-            <button type="submit" class="btn btn-secondary" th:if="${member.id} == ${post.author.id}">글 삭제</button>
+            <a type="submit" class="btn btn-secondary" th:if="${member.id} == ${post.author.id}" th:href="@{/boards/edit/{postId}(postId=${post.id})}">글 수정</a>
+            <a type="submit" class="btn btn-secondary" th:if="${member.id} == ${post.author.id}" th:href="@{/boards/delete/{postId}(postId=${post.id})}">글 삭제</a>
         </form>
     </div>
     <hr>
