--- a/src/main/resources/templates/boards/posts/detail/free.html
+++ b/src/main/resources/templates/boards/posts/detail/free.html
@@ -20,6 +20,11 @@
                 <p type="text" class="form-control" th:disabled="true" th:text="${post.lastModifiedDate}"></p>
             </span>
             <div class="form-group">
+                <div>첨부파일</div>
+<!--                <span th:text="${post.uploadFiles.uploadFile.getUploadFileName()}">첨부파일명</span>-->
+                <img class="rounded float-left" th:each="uploadFile : ${post.uploadFiles}" th:src="|/uploadFiles/${uploadFile.uploadFile.getStoreFileName()}|" width="300" height="300"/>
+            </div>
+            <div class="form-group">
                 <label>내용</label>
                 <textarea class="form-control" th:disabled="true" th:text="${post.content}">내용 입력</textarea>
             </div>
