--- a/src/main/resources/templates/boards/posts/edit/editForm.html
+++ b/src/main/resources/templates/boards/posts/edit/editForm.html
@@ -24,6 +24,25 @@
 <!--                <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Incorrect date</p>-->
             </div>
             <div class="form-group">
+                <label class="mb-3">첨부 파일</label>
+                <ul>
+                    <li class="form-control">
+                        첨부 파일들
+                        <input type="file" th:name="*{uploadFiles}" multiple="multiple">
+                    </li>
+                </ul>
+            </div>
+            <div class="form-group">
+                <div>첨부파일</div>
+                <!--                <span th:text="${post.uploadFiles.uploadFile.getUploadFileName()}">첨부파일명</span>-->
+                <div th:each="uploadFile : ${postEditForm.uploadFiles}">
+                    <img class="rounded float-left" th:src="|/uploadFiles/${uploadFile.uploadFile.getStoreFileName()}|" width="300" height="300"/>
+                    <button><a th:href="@{/boards/uploadFile/edit/{uploadFileId}(uploadFileId=${uploadFile.id})}">삭제</a></button>
+                </div>
+
+
+            </div>
+            <div class="form-group">
                 <label th:for="content">내용</label>
                 <textarea th:field="*{content}" class="form-control" th:text="${postEditForm.content}">내용 입력</textarea>
                 <!--                <input type="text" th:field="*{content}" class="form-control" placeholder="내용을 입력하세요" th:class="${#fields.hasErrors('content')}? 'form-control fieldError' : 'form-control'">-->
